front/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front
  labels:
    app: front
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - backend:
              serviceName: front
              servicePort: 8080
  tls:
    - hosts:
        - foo.bar.com
      secretName: hello-world--tls
